# graphics-rs

./: Cargo.toml  LICENSE  README.MD
examples/: points_cloud.rs  shapes.rs  text.rs
src/: canvas.rs  color.rs  graphics.rs  image.rs  lib.rs  main.rs  rect.rs  simple_canvas.rs
src/data/: ascii_letters.rs  mod.rs
src/fonts/: font.rs  letter.rs  mod.rs
src/math/: matrix.rs  mod.rs  num_utils.rs  vec2.rs  vec3.rs
src/shapes/: circle.rs  cube3d.rs  line.rs  mod.rs  point_cloud.rs  rect.rs  text.rs  triangle.rs
src/tools/: camera.rs
src/traits/: antialiasable.rs  canvas.rs  canvas_handler.rs  handles_draw_request.rs  is_color.rs  mod.rs  project.rs  requests_draw.rs  shape.rs
src/types/: types.rs
