[lib]
name = "graphics_rs"
path = "src/lib.rs"

[package]
name = "graphics-rs"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "A simple 2D graphics package with primitive functionality"
homepage = "https://github.com/muhammadmnorouzi/graphics-rs"
documentation = "https://docs.rs/graphics-rs"
repository = "https://github.com/muhammadmnorouzi/graphics-rs"
readme = "README.MD"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
softbuffer = "0.4.1"
winit = "0.29.15"
